src/native/jalium.native.core/include/jalium_api.h


JALIUM_API void jalium_text_format_set_text_rendering_mode(JaliumTextFormat* format, int32_t mode);
JALIUM_API void jalium_text_format_set_text_formatting_mode(JaliumTextFormat* format, int32_t mode);
JALIUM_API void jalium_text_format_set_text_hinting_mode(JaliumTextFormat* format, int32_t mode);
JALIUM_API JaliumResult jalium_text_format_hit_test_point(
    JaliumTextFormat* format,
    const wchar_t* text, uint32_t textLength,
    float maxWidth, float maxHeight,
    float pointX, float pointY,
    JaliumTextHitTestResult* result
);
JALIUM_API JaliumResult jalium_text_format_hit_test_text_position(
    JaliumTextFormat* format,
    const wchar_t* text, uint32_t textLength,
    float maxWidth, float maxHeight,
    uint32_t textPosition, int32_t isTrailingHit,
    JaliumTextHitTestResult* result
);
JALIUM_API JaliumResult jalium_text_format_measure_text(
    JaliumTextFormat* format,
    const wchar_t* text,
    uint32_t textLength,
    float maxWidth,
    float maxHeight,
    JaliumTextMetrics* metrics
);
JALIUM_API JaliumResult jalium_text_format_get_font_metrics(
    JaliumTextFormat* format,
    JaliumTextMetrics* metrics
);
JALIUM_API JaliumImage* jalium_bitmap_create_from_memory(
    JaliumContext* ctx,
    const uint8_t* data,
    uint32_t dataSize
);
JALIUM_API JaliumImage* jalium_bitmap_create_from_pixels(
    JaliumContext* ctx,
    const uint8_t* pixels,
    uint32_t width,
    uint32_t height,
    uint32_t stride
);
JALIUM_API uint32_t jalium_bitmap_get_width(JaliumImage* bitmap);
JALIUM_API uint32_t jalium_bitmap_get_height(JaliumImage* bitmap);
JALIUM_API int32_t jalium_bitmap_update_pixels(
    JaliumImage* bitmap,
    const uint8_t* pixels,
    uint32_t width,
    uint32_t height,
    uint32_t stride
);
JALIUM_API void jalium_bitmap_destroy(JaliumImage* bitmap);
JALIUM_API void jalium_draw_bitmap(
    JaliumRenderTarget* rt,
    JaliumImage* bitmap,
    float x, float y, float width, float height,
    float opacity
);
JALIUM_API void jalium_draw_bitmap_ex(
    JaliumRenderTarget* rt,
    JaliumImage* bitmap,
    float x, float y, float width, float height,
    float opacity,
    int scalingMode
);
JALIUM_API int32_t jalium_is_backend_available(JaliumBackend backend);
JALIUM_API void jalium_capture_desktop_area(
    JaliumRenderTarget* rt,
    int32_t screenX, int32_t screenY,
    int32_t width, int32_t height
);
JALIUM_API void jalium_draw_desktop_backdrop(
    JaliumRenderTarget* rt,
    float x, float y, float w, float h,
    float blurRadius,
    float tintR, float tintG, float tintB, float tintOpacity,
    float noiseIntensity, float saturation
);