src/native/jalium.native.platform/include/jalium_platform.h


typedef struct JaliumPlatformWindow JaliumPlatformWindow;
typedef uint16_t JaliumUtf16Char;
typedef enum JaliumWindowState {
    JALIUM_WINDOW_STATE_NORMAL    = 0,
    JALIUM_WINDOW_STATE_MINIMIZED = 1,
    JALIUM_WINDOW_STATE_MAXIMIZED = 2,
    JALIUM_WINDOW_STATE_FULLSCREEN = 3,
} JaliumWindowState;
typedef enum JaliumCursorShape {
    JALIUM_CURSOR_ARROW       = 0,
    JALIUM_CURSOR_HAND        = 1,
    JALIUM_CURSOR_IBEAM       = 2,
    JALIUM_CURSOR_CROSSHAIR   = 3,
    JALIUM_CURSOR_RESIZE_NS   = 4,
    JALIUM_CURSOR_RESIZE_EW   = 5,
    JALIUM_CURSOR_RESIZE_NESW = 6,
    JALIUM_CURSOR_RESIZE_NWSE = 7,
    JALIUM_CURSOR_RESIZE_ALL  = 8,
    JALIUM_CURSOR_NOT_ALLOWED = 9,
    JALIUM_CURSOR_WAIT        = 10,
    JALIUM_CURSOR_HIDDEN      = 11,
} JaliumCursorShape;
typedef struct JaliumWindowParams {
    const JaliumUtf16Char* title;    
    int32_t         x;              
    int32_t         y;              
    int32_t         width;
    int32_t         height;
    uint32_t        style;          
    intptr_t        parentHandle;   
} JaliumWindowParams;
JALIUM_PLATFORM_API JaliumResult jalium_platform_init(void);
JALIUM_PLATFORM_API void jalium_platform_shutdown(void);
JALIUM_PLATFORM_API JaliumPlatform jalium_platform_get_current(void);
JALIUM_PLATFORM_API JaliumPlatformWindow* jalium_window_create(
    const JaliumWindowParams* params);
JALIUM_PLATFORM_API void jalium_window_destroy(JaliumPlatformWindow* window);
JALIUM_PLATFORM_API void jalium_window_show(JaliumPlatformWindow* window);
JALIUM_PLATFORM_API void jalium_window_hide(JaliumPlatformWindow* window);
JALIUM_PLATFORM_API void jalium_window_set_title(
    JaliumPlatformWindow* window,
    const JaliumUtf16Char* title);
JALIUM_PLATFORM_API void jalium_window_resize(
    JaliumPlatformWindow* window,
    int32_t width,
    int32_t height);
JALIUM_PLATFORM_API void jalium_window_move(
    JaliumPlatformWindow* window,
    int32_t x,
    int32_t y);
JALIUM_PLATFORM_API void jalium_window_set_state(
    JaliumPlatformWindow* window,
    JaliumWindowState state);
JALIUM_PLATFORM_API JaliumWindowState jalium_window_get_state(
    JaliumPlatformWindow* window);
JALIUM_PLATFORM_API intptr_t jalium_window_get_native_handle(
    JaliumPlatformWindow* window);
JALIUM_PLATFORM_API JaliumSurfaceDescriptor jalium_window_get_surface(
    JaliumPlatformWindow* window);
JALIUM_PLATFORM_API uint32_t jalium_window_get_portal_parent_handle(
    JaliumPlatformWindow* window,
    char* utf8Buffer,
    uint32_t bufferSize);
JALIUM_PLATFORM_API uint32_t
jalium_window_get_portal_parent_handle_for_native_handle(
    intptr_t nativeHandle,
    char* utf8Buffer,
    uint32_t bufferSize);
JALIUM_PLATFORM_API void jalium_window_invalidate(JaliumPlatformWindow* window);
JALIUM_PLATFORM_API void jalium_window_set_cursor(
    JaliumPlatformWindow* window,
    JaliumCursorShape cursor);
JALIUM_PLATFORM_API void jalium_window_get_client_size(
    JaliumPlatformWindow* window,
    int32_t* width,
    int32_t* height);
JALIUM_PLATFORM_API void jalium_window_get_position(
    JaliumPlatformWindow* window,
    int32_t* x,
    int32_t* y);
JALIUM_PLATFORM_API float jalium_window_get_dpi_scale(
    JaliumPlatformWindow* window);
JALIUM_PLATFORM_API int32_t jalium_window_get_monitor_refresh_rate(
    JaliumPlatformWindow* window);
JALIUM_PLATFORM_API int32_t jalium_window_update_ime_context(
    JaliumPlatformWindow* window,
    int32_t enabled,
    const char* utf8Text,
    int32_t cursorByteOffset,
    int32_t anchorByteOffset,
    int32_t x,
    int32_t y,
    int32_t width,
    int32_t height);