src/managed/Jalium.UI.Interop/NativeMethods.cs


    /// <summary>
    /// Sets the per-format text rendering (anti-alias) mode mirroring
    /// <see cref="Jalium.UI.Media.TextRenderingMode"/>:
    /// 0=Auto, 1=Aliased, 2=Grayscale, 3=ClearType. Auto falls through to
    /// the process-wide <c>jalium_text_set_global_antialias_mode</c>.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_text_format_set_text_rendering_mode")]
    internal static partial void TextFormatSetTextRenderingMode(nint textFormat, int mode);

    /// <summary>
    /// Sets the per-format text formatting mode mirroring
    /// <see cref="Jalium.UI.Media.TextFormattingMode"/>:
    /// 0=Ideal (resolution-independent metrics), 1=Display (pixel-snapped).
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_text_format_set_text_formatting_mode")]
    internal static partial void TextFormatSetTextFormattingMode(nint textFormat, int mode);

    /// <summary>
    /// Sets the per-format text hinting mode mirroring
    /// <see cref="Jalium.UI.Media.TextHintingMode"/>:
    /// 0=Auto, 1=Fixed, 2=Animated. Animated is the mode WPF storyboards
    /// switch to during sub-pixel slide / fade so the hinting doesn't pop
    /// a pixel mid-animation.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_text_format_set_text_hinting_mode")]
    internal static partial void TextFormatSetTextHintingMode(nint textFormat, int mode);

    /// <summary>
    /// Hit-tests a point against a text layout.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_text_format_hit_test_point", StringMarshalling = StringMarshalling.Utf16)]
    internal static partial int TextFormatHitTestPoint(nint textFormat, string text, int textLength,
        float maxWidth, float maxHeight, float pointX, float pointY, out TextHitTestResult result);

    /// <summary>
    /// Gets caret position for a given text index.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_text_format_hit_test_text_position", StringMarshalling = StringMarshalling.Utf16)]
    internal static partial int TextFormatHitTestTextPosition(nint textFormat, string text, int textLength,
        float maxWidth, float maxHeight, uint textPosition, int isTrailingHit, out TextHitTestResult result);

    /// <summary>
    /// Measures text and returns metrics.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_text_format_measure_text", StringMarshalling = StringMarshalling.Utf16)]
    internal static partial int TextFormatMeasureText(nint textFormat, string text, int textLength, float maxWidth, float maxHeight, out TextMetrics metrics);

    /// <summary>
    /// Gets font metrics without measuring text.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_text_format_get_font_metrics")]
    internal static partial int TextFormatGetFontMetrics(nint textFormat, out TextMetrics metrics);

    #endregion

    #region Bitmap Management

    /// <summary>
    /// Creates a bitmap from encoded image data.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_bitmap_create_from_memory")]
    internal static partial nint BitmapCreateFromMemory(nint context, [In] byte[] data, uint dataSize);

    /// <summary>
    /// Creates a bitmap from raw BGRA8 pixel data. Pixels are STRAIGHT
    /// (non-premultiplied) alpha regardless of backend; the native backend
    /// premultiplies internally where its blend requires it (D3D12 on upload,
    /// Vulkan while packing replay staging, software blends straight). Callers
    /// must not premultiply and stay backend-agnostic.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_bitmap_create_from_pixels")]
    internal static partial nint BitmapCreateFromPixels(nint context, [In] byte[] pixels, uint width, uint height, uint stride);

    /// <summary>
    /// Gets the width of a bitmap.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_bitmap_get_width")]
    internal static partial uint BitmapGetWidth(nint bitmap);

    /// <summary>
    /// Gets the height of a bitmap.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_bitmap_get_height")]
    internal static partial uint BitmapGetHeight(nint bitmap);

    /// <summary>
    /// Updates an existing bitmap's pixels in place. Avoids the per-frame texture
    /// recreation that thrashes the swap chain when a video / WriteableBitmap streams
    /// frames at 30+fps. Pixels are STRAIGHT (non-premultiplied) alpha; the native
    /// backend premultiplies internally where its blend requires it. Returns 1 on
    /// success, 0 on failure (size mismatch / unsupported backend).
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_bitmap_update_pixels")]
    internal static partial int BitmapUpdatePixels(nint bitmap, [In] byte[] pixels, uint width, uint height, uint stride);

    /// <summary>
    /// Destroys a bitmap.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_bitmap_destroy")]
    internal static partial void BitmapDestroy(nint bitmap);

    /// <summary>
    /// Draws a bitmap.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_draw_bitmap")]
    internal static partial void DrawBitmap(nint renderTarget, nint bitmap, float x, float y, float width, float height, float opacity);

    /// <summary>
    /// Draws a bitmap with explicit scaling-mode selection.
    /// scalingMode values mirror <see cref="Jalium.UI.Media.BitmapScalingMode"/> integer ordinals
    /// (Unspecified=0, LowQuality=1, HighQuality=2, NearestNeighbor=3, Linear=4, Fant=5).
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_draw_bitmap_ex")]
    internal static partial void DrawBitmapEx(nint renderTarget, nint bitmap, float x, float y, float width, float height, float opacity, int scalingMode);

    /// <summary>
    /// Draws a native video surface (BGRA8 staged on Unlock, or future
    /// platform-imported D3D11 / VkImage / AHardwareBuffer / IOSurface).
    /// Pairs with <c>jalium_video_surface_create</c> in jalium_video_surface.h.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_render_target_draw_video_surface")]
    internal static partial void DrawVideoSurface(nint renderTarget, nint videoSurface,
        float x, float y, float width, float height, float opacity, int scalingMode);

    /// <summary>
    /// Captures the desktop area at the specified screen coordinates.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_capture_desktop_area")]
    internal static partial void CaptureDesktopArea(nint renderTarget, int screenX, int screenY, int width, int height);

    /// <summary>
    /// Draws the cached desktop capture with blur and tint overlay.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_draw_desktop_backdrop")]
    internal static partial void DrawDesktopBackdrop(
        nint renderTarget,
        float x, float y, float w, float h,
        float blurRadius,
        float tintR, float tintG, float tintB, float tintOpacity,
        float noiseIntensity, float saturation);

    #endregion

    #region Backend Registration

    /// <summary>
    /// Checks if a backend is available.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_is_backend_available")]
    private static partial int IsBackendAvailableNative(RenderBackend backend);

    /// <summary>
    /// Public availability probe. Performs the lazy backend init for the
    /// requested backend before delegating to the native registry, so a
    /// caller asking "is Vulkan available?" actually loads jalium.native.vulkan
    /// (and its transitive vulkan-1.dll) at this point — and only at this
    /// point — instead of paying that cost up front in the static ctor.
    /// </summary>
    internal static int IsBackendAvailable(RenderBackend backend)
    {
        EnsureBackendInitialized(backend);
        return IsBackendAvailableNative(backend);
    }

    #endregion

    #region Platform Library (jalium.native.platform)

    // --- Platform Initialization ---

    [LibraryImport(PlatformLib, EntryPoint = "jalium_platform_init")]
    internal static partial int PlatformInit();

    [LibraryImport(PlatformLib, EntryPoint = "jalium_platform_shutdown")]
    internal static partial void PlatformShutdown();

    [LibraryImport(PlatformLib, EntryPoint = "jalium_platform_get_current")]
    internal static partial int PlatformGetCurrent();

    // --- Window Management ---

    [LibraryImport(PlatformLib, EntryPoint = "jalium_window_create")]
    internal static partial nint WindowCreate(ref NativePlatformWindowParams windowParams);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_window_destroy")]
    internal static partial void WindowDestroy(nint window);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_window_show")]
    internal static partial void WindowShow(nint window);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_window_hide")]
    internal static partial void WindowHide(nint window);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_window_set_title", StringMarshalling = StringMarshalling.Utf16)]
    internal static partial void WindowSetTitle(nint window, string title);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_window_resize")]
    internal static partial void WindowResize(nint window, int width, int height);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_window_move")]
    internal static partial void WindowMove(nint window, int x, int y);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_window_set_state")]
    internal static partial void WindowSetState(nint window, int state);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_window_get_state")]
    internal static partial int WindowGetState(nint window);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_window_get_native_handle")]
    internal static partial nint WindowGetNativeHandle(nint window);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_window_get_surface")]
    internal static partial NativeSurfaceDescriptor WindowGetSurface(nint window);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_window_get_portal_parent_handle")]
    internal static partial uint WindowGetPortalParentHandle(
        nint window, nint utf8Buffer, uint bufferSize);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_window_get_portal_parent_handle_for_native_handle")]
    internal static partial uint WindowGetPortalParentHandleForNativeHandle(
        nint nativeHandle, nint utf8Buffer, uint bufferSize);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_window_invalidate")]
    internal static partial void WindowInvalidate(nint window);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_window_set_cursor")]
    internal static partial void WindowSetCursor(nint window, int cursorShape);

    [LibraryImport(
        PlatformLib,
        EntryPoint = "jalium_window_update_ime_context",
        StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int WindowUpdateImeContext(
        nint window,
        int enabled,
        string? utf8Text,
        int cursorByteOffset,
        int anchorByteOffset,
        int x,
        int y,
        int width,
        int height);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_window_get_client_size")]
    internal static partial void WindowGetClientSize(nint window, out int width, out int height);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_window_get_position")]
    internal static partial void WindowGetPosition(nint window, out int x, out int y);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_window_get_dpi_scale")]
    internal static partial float WindowGetDpiScale(nint window);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_window_get_monitor_refresh_rate")]
    internal static partial int WindowGetMonitorRefreshRate(nint window);

    // --- Window management extensions ---
